--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -546,13 +546,14 @@
       <DependentUpon>Model_seguridad_acceso.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reportes\ActivoFijo\VWACTF_001_Data.cs" />
-    <Compile Include="Reportes\ActivoFijo\VWACTF_002_Data.cs" />
-    <Compile Include="Reportes\ActivoFijo\VWACTF_003_Data.cs" />
-    <Compile Include="Reportes\Caja\VWCAJ_001_Data.cs" />
-    <Compile Include="Reportes\Contabilidad\VWCONTA_001_Data.cs" />
-    <Compile Include="Reportes\Inventario\VWINV_001_Data.cs" />
-    <Compile Include="Reportes\Inventario\VWINV_002_Data.cs" />
+    <Compile Include="Reportes\ActivoFijo\ACTF_001_Data.cs" />
+    <Compile Include="Reportes\ActivoFijo\ACTF_002_Data.cs" />
+    <Compile Include="Reportes\ActivoFijo\ACTF_003_Data.cs" />
+    <Compile Include="Reportes\Caja\CAJ_001_Data.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_001_Data.cs" />
+    <Compile Include="Reportes\Inventario\INV_003_Data.cs" />
+    <Compile Include="Reportes\Inventario\INV_001_Data.cs" />
+    <Compile Include="Reportes\Inventario\INV_002_Data.cs" />
     <Compile Include="ro_Acta_Finiquito.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -784,6 +785,9 @@
     </Compile>
     <Compile Include="seg_Usuario_x_Empresa.cs">
       <DependentUpon>Model_seguridad_acceso.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SPINV_003_Result.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="spro_nomina_x_pago_utilidad_Result.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
