--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -134,13 +134,13 @@
     <Compile Include="Inventario\in_UnidadMedida_Equiv_conversion_Info.cs" />
     <Compile Include="Inventario\in_UnidadMedida_Info.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reportes\ActivoFijo\VWACTF_001_Info.cs" />
-    <Compile Include="Reportes\ActivoFijo\VWACTF_002_Info.cs" />
-    <Compile Include="Reportes\ActivoFijo\VWACTF_003_Info.cs" />
-    <Compile Include="Reportes\Caja\VWCAJ_001_Info.cs" />
-    <Compile Include="Reportes\Contabilidad\VWCONTA_001_Info.cs" />
-    <Compile Include="Reportes\Inventario\VWINV_001_Info.cs" />
-    <Compile Include="Reportes\Inventario\VWINV_002_Info.cs" />
+    <Compile Include="Reportes\ActivoFijo\ACTF_001_Info.cs" />
+    <Compile Include="Reportes\ActivoFijo\ACTF_002_Info.cs" />
+    <Compile Include="Reportes\ActivoFijo\ACTF_003_Info.cs" />
+    <Compile Include="Reportes\Caja\CAJ_001_Info.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_001_Info.cs" />
+    <Compile Include="Reportes\Inventario\INV_001_Info.cs" />
+    <Compile Include="Reportes\Inventario\INV_002_Info.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Detalle_Info.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Info.cs" />
     <Compile Include="RRHH\ro_area_Info.cs" />
