--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -7812,12 +7812,12 @@
     <Content Include="Areas\Reportes\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Reportes\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_001.cshtml" />
-    <Content Include="Areas\Reportes\Views\ActivoFijoReportes\VWACTF_001.cshtml" />
-    <Content Include="Areas\Reportes\Views\InventarioReportes\VWINV_001.cshtml" />
-    <Content Include="Areas\Reportes\Views\ActivoFijoReportes\VWACTF_002.cshtml" />
-    <Content Include="Areas\Reportes\Views\ActivoFijoReportes\VWACTF_003.cshtml" />
-    <Content Include="Areas\Reportes\Views\InventarioReportes\VWINV_002.cshtml" />
-    <Content Include="Areas\Reportes\Views\CajaReportes\VWCAJ_001.cshtml" />
+    <Content Include="Areas\Reportes\Views\ActivoFijoReportes\ACTF_001.cshtml" />
+    <Content Include="Areas\Reportes\Views\InventarioReportes\INV_001.cshtml" />
+    <Content Include="Areas\Reportes\Views\ActivoFijoReportes\ACTF_002.cshtml" />
+    <Content Include="Areas\Reportes\Views\ActivoFijoReportes\ACTF_003.cshtml" />
+    <Content Include="Areas\Reportes\Views\InventarioReportes\INV_002.cshtml" />
+    <Content Include="Areas\Reportes\Views\CajaReportes\CAJ_001.cshtml" />
     <Content Include="Areas\RRHH\Views\ActaFiniquito\Index2.cshtml" />
     <Content Include="Areas\RRHH\Views\ActaFiniquito\Liquidar.cshtml" />
     <Content Include="Areas\RRHH\Views\ProcesarRol\AbrirPeriodo.cshtml" />
