--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -7852,6 +7852,8 @@
     <Content Include="Scripts\Devexpress\date.js" />
     <Content Include="Scripts\Devexpress\ext-language_tools.js" />
     <Content Include="Scripts\Devexpress\globalize.js" />
+    <Content Include="Content\DevExpress\jquery-ui.css" />
+    <Content Include="Content\DevExpress\jquery-ui.min.css" />
     <Content Include="Scripts\Devexpress\jquery.js" />
     <Content Include="Scripts\Devexpress\jquery.min.js" />
     <Content Include="Scripts\Devexpress\knockout.debug.js" />
