--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -553,6 +553,7 @@
     <Compile Include="Reportes\Contabilidad\VWCONTA_001_Data.cs" />
     <Compile Include="Reportes\Inventario\VWINV_001_Data.cs" />
     <Compile Include="Reportes\Inventario\VWINV_002_Data.cs" />
+    <Compile Include="Reportes\RRHH\VWROL_001_Data.cs" />
     <Compile Include="ro_Acta_Finiquito.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -876,6 +877,9 @@
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="VWINV_002.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VWROL_001.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="vwROL_Rpt002.cs">
