--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -7902,7 +7902,7 @@
     <Content Include="Areas\RRHH\Views\ProcesarRol\_GridViewPartial_provisiones.cshtml" />
     <Content Include="Areas\RRHH\Views\ProcesarRol\_GridViewPartial_sueldo_x_pagar.cshtml" />
     <Content Include="Areas\RRHH\Views\Vacaciones\_GridViewPartial_vaciones_periodos.cshtml" />
-    <Content Include="Areas\Reportes\Views\RRHHReportes\VWROL_001.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_001.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_003.cshtml" />
     <Content Include="bower_DevExpress\ace-builds\.bower.json" />
     <Content Include="bower_DevExpress\ace-builds\bower.json" />
