--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -7949,6 +7949,7 @@
     <Content Include="bower_DevExpress\knockout\LICENSE" />
     <Content Include="bower_DevExpress\knockout\package.json" />
     <Content Include="bower_DevExpress\knockout\README.md" />
+    <Content Include="Areas\Reportes\Views\Layout\_Layout_filtros.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
