--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Reportes\Inventario\INV_003_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_001_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_002_Bus.cs" />
+    <Compile Include="Reportes\RRHH\ROL_002_Bus.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Bus.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Detalle_Bus.cs" />
     <Compile Include="RRHH\ro_area_Bus.cs" />
