--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Reportes\Inventario\INV_001_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_002_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_003_Info.cs" />
+    <Compile Include="Reportes\RRHH\ROL_002_Info.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Detalle_Info.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Info.cs" />
     <Compile Include="RRHH\ro_area_Info.cs" />
